// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview that overview page renders normally 1`] = `
<EuiPage
  restrictWidth={false}
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={true}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Active Beats in Last Day
        </h3>
      </EuiTitle>
      <EuiSpacer
        size="s"
      />
      <LatestActive
        latestActive={
          Array [
            Object {
              "count": 5,
              "range": "last1m",
            },
            Object {
              "count": 5,
              "range": "last5m",
            },
            Object {
              "count": 5,
              "range": "last20m",
            },
            Object {
              "count": 6,
              "range": "last1h",
            },
            Object {
              "count": 10,
              "range": "last1d",
            },
          ]
        }
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Top 5 Beat Types in Last Day
        </h3>
      </EuiTitle>
      <EuiSpacer
        size="s"
      />
      <LatestTypes
        latestTypes={
          Array [
            Object {
              "count": 4,
              "type": "Packetbeat",
            },
            Object {
              "count": 4,
              "type": "Metricbeat",
            },
            Object {
              "count": 2,
              "type": "Heartbeat",
            },
          ]
        }
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Top 5 Versions in Last Day
        </h3>
      </EuiTitle>
      <EuiSpacer
        size="s"
      />
      <LatestVersions
        latestVersions={
          Array [
            Object {
              "count": 8,
              "version": "6.3.1",
            },
            Object {
              "count": 2,
              "version": "6.3.0",
            },
          ]
        }
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <Stats
    stats={Array []}
  />
  <EuiSpacer
    size="xs"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={true}
  >
    <EuiFlexItem
      component="div"
      grow={true}
      key="0"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
      key="1"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
      key="2"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
      key="3"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPage>
`;

exports[`Overview that overview page shows a message if there is no beats data 1`] = `
<EuiPage
  restrictWidth={false}
>
  <EuiCallOut
    color="primary"
    data-test-subj="noRecentActivityMessage"
    iconType="gear"
    size="m"
    title="Hi there! This area is where your latest Beats activity would show
up, but you don't seem to have any activity within the last day."
  />
  <EuiSpacer
    size="s"
  />
  <Stats
    stats={Array []}
  />
  <EuiSpacer
    size="xs"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={true}
  >
    <EuiFlexItem
      component="div"
      grow={true}
      key="0"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
      key="1"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
      key="2"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
      key="3"
      style={
        Object {
          "minWidth": "45%",
        }
      }
    >
      <MonitoringTimeseriesContainer
        series={1}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPage>
`;
